--- a/type-aids-starter/pom.xml
+++ b/type-aids-starter/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>vo-starter</artifactId>
-
+    <artifactId>type-aids-starter</artifactId>
 
     <build>
         <plugins>
@@ -20,5 +19,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
